--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,11 @@
 	background-color: violet;
 }
 
-/*SMALL SCREEN SVG WIDTH*/
+.main-headline {
+	margin-top: 8%;
+}
+
+/*SMALL SCREEN FIXES*/
 @media (max-width: 480px) {
 	.hand-illustration svg {
 		max-width: 100%;
@@ -66,6 +70,11 @@
 
 	header {
 		height: 100%;
+	}
+
+	#homeHeading {
+    padding: 18% 0px 6% 0px;
+    font-size: 2em;
 	}
 }
 
